sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:21: error: not found: value echnger
      echnger=true
      ^